==> micropython/micropython/atmel-samd/pin.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include "py/nlr.h"
#include "py/runtime.h"
#include "py/mphal.h"
#include "pin.h"
#include "asf/sam0/drivers/port/port.h"

STATIC mp_obj_t pin_call(mp_obj_t self_in, mp_uint_t n_args, mp_uint_t n_kw, const mp_obj_t *args) {
    mp_arg_check_num(n_args, n_kw, 0, 1, false);
    pin_obj_t *self = self_in;
    if (n_args == 0) {
        // get pin
        // TODO(tannewt): Do we need to switch read functions based on our direction?
        return MP_OBJ_NEW_SMALL_INT(port_pin_get_input_level(self->pin));
    } else {
        // set pin
        port_pin_set_output_level(self->pin, mp_obj_is_true(args[0]));
        return mp_const_none;
    }
}

STATIC mp_obj_t pin_obj_init_helper(const pin_obj_t *self, mp_uint_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode, MP_ARG_REQUIRED | MP_ARG_INT },
        { MP_QSTR_pull, MP_ARG_OBJ, {.u_obj = mp_const_none}},
        { MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL}},
    };

    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // get io mode
    enum port_pin_dir mode = args[0].u_int;
    switch(mode)
    {
      case PORT_PIN_DIR_INPUT:
      case PORT_PIN_DIR_OUTPUT:
      case PORT_PIN_DIR_OUTPUT_WTH_READBACK:
        //do the work
        break;

      default:
        nlr_raise(mp_obj_new_exception_msg_varg(&mp_type_ValueError, "invalid pin mode: %d", mode));
    }

    // get pull mode
    enum port_pin_pull pull = PORT_PIN_PULL_NONE;
    if (args[1].u_obj != mp_const_none) {
        pull = mp_obj_get_int(args[1].u_obj);
    }
    switch(pull)
    {
      case PORT_PIN_PULL_NONE:
      case PORT_PIN_PULL_UP:
      case PORT_PIN_PULL_DOWN:
        //do the work
        break;

      default:
        nlr_raise(mp_obj_new_exception_msg_varg(&mp_type_ValueError, "invalid pin pull: %d", pull));
    }

    // if given, set the pin value before initialising to prevent glitches
    if (args[2].u_obj != MP_OBJ_NULL) {
        port_pin_set_output_level(self->pin, mp_obj_is_true(args[2].u_obj));
    }

    // configure the GPIO as requested
    struct port_config pin_conf;
    port_get_config_defaults(&pin_conf);

    pin_conf.direction  = mode;
    pin_conf.input_pull = pull;
    port_pin_set_config(self->pin, &pin_conf);

    return mp_const_none;
}
